Updated the laboratory report.

--- a/report/图形学实验02_报告.md
+++ b/report/图形学实验02_报告.md
@@ -263,17 +263,17 @@ $$
 下一时刻的值 $y_{n+1}$ 可以通过上一时刻的值 $y_{n}$ 加上上时间间隔 $\Delta t$ 和一个估算的线性增长率的乘积所决定。
 此时使用的线性增长率 $K$ 由函数 $\mathbf{y}(t)$ 在$[t,t+\Delta t]$两个时刻之间一系列点的斜率的加权平均来表示。
 
-除了初始点 $(t_0,\mathbf{y}(t_0))$ 处 $\mathbf{y}(t)$ 已知外，另外点处 $\mathbf{y}(t)$ 的值均为未知，可以通过欧拉方法计算得到，每点处 $\mathbf{y}(t)$ 的值都是以 $\mathbf{y}(t_0)$ 为基础，加上k乘以自变量的改变值。这里每一点使用欧拉方法计算$\mathbf{y}(t_0)$ 时使用的 $k$ 都是上一点处的斜率k，迭代计算，以减小误差：
+除了初始点 $(t_0,\mathbf{y}(t_0))$ 处 $\mathbf{y}(t)$ 已知外，另外点处 $\mathbf{y}(t)$ 的值均为未知，可以通过欧拉方法计算得到，每点处 $\mathbf{y}(t)$ 的值都是以 $\mathbf{y}(t_0)$ 为基础，加上k乘以自变量的改变值。这里每一点在使用欧拉方法计算$\mathbf{y}(t_0)$ 时 ，都依次使用上一点处的斜率 $k$ ，以增加准确性：
 $$
 \mathbf{y}(t_0+\Delta t)=\mathbf{y}(t_0)+k_{上一点}\cdot\Delta t
 $$
 
 常用的一组点为：
 $$
-(t,\mathbf{y}(t));
-\\(t+\frac{\Delta t}{2},\mathbf{y}(t)+\frac{\Delta t}{2}\cdot k_1);
-\\(t+\frac{\Delta t}{2},\mathbf{y}(t)+\frac{\Delta t}{2}\cdot k_2);
-\\(t+\Delta t,\mathbf{y}(t)+\Delta t\cdot k_3);
+T1:&(t,\mathbf{y}(t));
+\\T2:&(Zt+\frac{\Delta t}{2},\mathbf{y}(t)+\frac{\Delta t}{2}\cdot k_1);
+\\T3:&(t+\frac{\Delta t}{2},\mathbf{y}(t)+\frac{\Delta t}{2}\cdot k_2);
+\\T4:&(t+\Delta t,\mathbf{y}(t)+\Delta t\cdot k_3);
 $$
 
 $\mathbf{y}$ 的斜率 $k$ 可以表示为：       $k= \dot{\mathbf{y}}(t)=f(t,\mathbf{y}(t))$
@@ -301,89 +301,41 @@ K=\frac{k_1+2k_2+2k_3+k_4}{6}
 $$
 本模型中，斜率 $k$ 的计算方法为：
 $$
-k
+k_{n}
 =\begin{pmatrix}
-\dot v_{t}\\
-\dot q_{t}
+\dot v_{n}\\
+\dot q_{n}
 \end{pmatrix}
-=A^{-1}\mathbf{f(y_t)}
+=A^{-1}\mathbf{f(y_{n})}
 =\begin{pmatrix}
-\frac{-kq_t}{m}\\
-v_t
-\end{pmatrix}
-$$
-这样：
-$$
-k_1
-=\begin{pmatrix}
-\frac{-kq_{t_0}}{m}\\
-v_{t_0}
-\end{pmatrix}
-\\k_2
-=\begin{pmatrix}
-\frac{-kq_{t_0}}{m}\\
-v_{t_0}
+\frac{-kq_{n}}{m}\\
+v_{n}
 \end{pmatrix}
 $$
+其中选取的四个点的 $q_{n},v_{n}$ (n=1,2,3,4)的计算方式为：
 
-
-
-
-
-
-由于除了初始点 $(t_0,q(t_0))$ 处 $q(t)$ 已知外，另外点处 $q(t)$ 的值均为未知，故可以迭代计算，每点处 $q(t)$ 的值都是以 $q(t_0)$ 为基础，通过上一点处的k使用欧拉方法计算得到：
 $$
-q(t_0+\Delta t)=q(t_0)+k_{上一点}\cdot\Delta t
+  q_1=q_{t}
+\\v_1=v_{t}
+\\q_{n}=q_{t}+k_{n-1}\times\delta t
+\\v_{n}=v_{t}+\frac{-k_{n-1}\cdot q_{n-1}}{m} \times \delta t
 $$
 
-常用的一组点为：
-$$
-(t,q(t));
-\\(t+\frac{\Delta t}{2},q(t)+\frac{\Delta t}{2}\cdot k_1);
-\\(t+\frac{\Delta t}{2},q(t)+\frac{\Delta t}{2}\cdot k_2);
-\\(t+\Delta t,q(t)+\Delta t\cdot k_3);
-$$
-
-其中：
-
-- *k*1是时间段开始时的斜率；
-- *k*2是时间段中点的斜率，通过欧拉法采用斜率*k*1来决定*y*在点$t+\frac{\Delta t}{2}$的值；
-- *k*3也是中点的斜率，但是这次采用斜率*k*2决定*y*值；
-- *k*4是时间段终点的斜率，其*y*值用*k*3决定。
-
-$q$ 的斜率 $k$ 可以表示为：       $k=\dot q(t)=f(t,q(t))$
-
-这样：
-$$
-\begin{aligned}
-k_1&=f[t,q(t)]
-\\k_2&=f[(t+\frac{\Delta t}{2}),q(t)+\frac{\Delta t}{2}\cdot k_1]
-\\k_3&=f[(t+\frac{\Delta t}{2}),q(t)+\frac{\Delta t}{2}\cdot k_2]
-\\k_4&=f[(t+\Delta t),q(t)+\Delta t\cdot k_3]
-\end{aligned}
-$$
-当四个斜率取平均时，中点的斜率有更大的权值，故最终使用的 $k$ 为:
-$$
-k=\frac{k_1+2k_2+2k_3+k_4}{6}
-$$
-因此可得：
-$$
-q_{t+1}=q_{t}+k\times\Delta t
-$$
-
-同理，可计算每一点处
-$$
-\\v_{t+1}=v_{t}+\frac{-k\cdot q_{t}}{m} \times \Delta t
-$$
+按照公式依次计算即可。
 
 #### #4.2.3：隐式（向后）欧拉方法
 
-与前向欧拉方法相近，但是使用的斜率是后一个时刻（t+1时刻）的斜率。这样得到的微分方程是隐式的，解之得：
+方法与前向欧拉方法相近，但是使用的斜率是后一个时刻（t+1时刻）的斜率：
+$$
+\mathbf{y}_{t+1}=\mathbf{y}_{t}+A^{-1}\mathbf{f(y_t)}\cdot\Delta t（显式欧拉方法）
+\\\mathbf{y}_{t+1}=\mathbf{y}_{t}+A^{-1}\mathbf{f(y_{t+1})}\cdot\Delta t（隐式欧拉方法）
+$$
+这样得到的微分方程是隐式的，解之得：
 $$
 \begin{aligned}
 v_{t+1}&=(v_{t}+a\Delta t)/(1+\frac{k}{m}\Delta t^{2})
-     \\&=v_{t}+\frac{f}{m} \times \Delta t
-     \\&=v_{t}+\frac{-k\cdot q_{t}}{m} \times \Delta t
+     \\&=(v_{t}+\frac{f}{m} \Delta t)/(1+\frac{k}{m}\Delta t^{2})
+     \\&=(v_{t}+\frac{-k\cdot q_{t}}{m}\Delta t)/(1+\frac{k}{m}\Delta t^{2})
 \end{aligned}
 $$
 
@@ -397,60 +349,194 @@ $$
 
 #### #4.2.4：混合欧拉方法
 
-速度的计算使用后向欧拉方法，位移的计算使用的是前向欧拉方法，得出结果为：
-$$
-\begin{aligned}
-v_{t+1}&=v_{t}+a\times\Delta t
-     \\&=v_{t}+\frac{f}{m} \times \Delta t
-     \\&=v_{t}+\frac{-k\cdot q_{t}}{m} \times \Delta t
-\end{aligned}
-$$
+结合使用了前向欧拉方法和后向欧拉方法。
 
+首先使用前向欧拉方法计算速度，再通过这个更新后的速度，使用后向欧拉方法计算位移。
+
+得出结果为：
 $$
 \begin{aligned}
-q_{t+1}&=q_{t}+v_{t+1}\times\Delta t
+v_{t+1}&=v_{t}+\frac{-k\cdot q_{t}}{m} \times \Delta t
+\\q_{t+1}&=q_{t}+v_{t+1}\times\Delta t
 \end{aligned}
 $$
 
 ### #4.3.四种积分性能的比较与分析
 
-效果
+在四种积分性能的比较与分析中，我们不仅希望能分析各种积分的效果，还希望能够看到近似计算得到的结果的稳定性以及准确性。可以使用q-v相空间来测试这几种方法近似计算的路径和解析解（正确的路径）之间的差异。同时由于图形学中更关心视觉准确性，也即相比是否遵循实际、绝对准确的物理轨迹，我们更关心它看起来是否令人信服，应将这个因素纳入考虑。
 
-稳定性
+实际的，或解析解得到的一维弹簧-质量模型的相位-空间图中，物块的运行轨迹应当是一个圆形，物块每次到达特定位置时的速度均相同，每完成一个周期的运行后能回到初始位置。
 
-·使用q-v相空间来测试这几种方法近似计算的路径和解析解（正确的路径之间的差异）
-
-准确性
-
-图形学中，更关心视觉准确性，也即相比是否遵循实际、绝对准确的物理轨迹，我们更关心它看起来是否令人信服
+![image-20211124162524278](图形学实验报告02_图片\lab02_expected_phase-space_trajectory.png)
 
 #### #4.3.1 前向欧拉积分
 
-在q-v相空间的轨迹，从初始位置不断向外螺旋。
+
 
 ![](\图形学实验报告02_图片\lab02_foward_euler_phase-space_trajectory.png)
 
-虽然十分简单，但并不十分适用于这里使用的弹簧系统的实际情况
+能看到，前向欧拉积分在q-v相空间的轨迹从初始位置开始不断向外螺旋，随着时间的推移愈发背离初始位置。前向欧拉积分虽然十分简单，但并不十分适用于这里使用的弹簧系统的实际情况
 
 ####  #4.3.2 四阶Runge-Kutta
 
+![image-20211124161607068](E:\图形学\实验2\lab02\report\图形学实验报告02_图片\lab02_runge-kutta_phase-space_trajectory.png)
+
+相位图中，物块在移动一圈后回到出发位置和相同速度。一维弹簧-质量系统稳定，无能量损失，不管经过多长时间系统模拟都将继续存在，能较好的模拟这里使用的一维弹簧-质量系统。
+
 #### #4.3.3 后向欧拉积分
+
+![image-20211124155610791](图形学实验报告02_图片\lab02_backward_euler_phase-space_trajectory.png)
+
+相位图从初始空间不断螺旋向内直到原点。相当于阻尼能量损失。
+
+虽然看起来并不和无摩擦的假设一致，但是可以使积分器非常稳定，可以表现出真实世界的阻尼，使得动画看起来更逼真，更可信，而无需对正在求解的微分方程进行额外修改。符合我们“相较于真实世界情况，更加看重视觉的合理性”的内在要求。
 
 #### #4.3.4 混合欧拉积分
 
+![](图形学实验报告02_图片\lab02_symplectic_euler_phase-space_trajectory.png)
 
+和4阶龙格库塔方法一样，系统稳定，不管经过多长时间系统模拟都将继续存在。
+
+不是像后向欧拉方法那样全功率隐式更新，而是更类似于提高积分精度的rk4样式预测。
 
 
 
 ## 五、 代码实现与实验结果
 
+#### #5.0 基本的变量信息
+
+实验中，弹簧对物块的作用力为 $f$，物块的位移为 $q$，物块的速度为 $qdot$，均为Eigen::VectorXd类型，长度resize为1，即1x1的矩阵。
+
+物块的质量为 $mass$，每次细分的时间长度为 $dt$，弹簧的弹性系数为 $stiffness$，均为 $double$ 类型。
+
 #### #5.1.1 前向欧拉积分
 
+```c
+template<typename FORCE> 
+inline void forward_euler(Eigen::VectorXd &q, Eigen::VectorXd &qdot, double dt, double mass,  FORCE &force) {
+	Eigen::VectorXd f;                  // 用于存储力f的矩阵
+    Eigen::VectorXd q_new;              // 用于存储经过dt后位移q的值的矩阵
+    Eigen::VectorXd qdot_new;           // 用于存储经过dt后速度qdot的值的矩阵
+	force(f, q, qdot);                  // 计算这时的弹簧给球的力f=-kx，存储在f中
+
+    qdot_new = (f / mass) * dt + qdot;  // v1 = a * dt + v0
+    q_new = qdot * dt + q;              // x1 = v0 * dt + x0
+
+    q = q_new;                          // 将新的q通过引用传出
+    qdot = qdot_new;                    // 将新的qdot通过引用传出
+}
+```
+
+
+
 ####  #5.1.2 四阶Runge-Kutta
+```c
+template<typename FORCE> 
+inline void runge_kutta(Eigen::VectorXd &q, Eigen::VectorXd &qdot, double dt, double mass,  FORCE &force) {
+    // 在（t，t+dt）的区间里取四个点进行加权平均
+    Eigen::VectorXd f1, f2, f3, f4;                 // 用于存储力f的矩阵 
+    Eigen::VectorXd q_new;                          // 用于存储经过dt后位移q的值的矩阵
+    Eigen::VectorXd qdot_new;                       // 用于存储经过dt后速度qdot的值的矩阵
+    Eigen::VectorXd q1, q2, q3, q4;                 // 用于存储取的四个点位移q的值的矩阵
+    Eigen::VectorXd qdot1, qdot2, qdot3, qdot4;     // 用于存储取的四个点速度qdot的值的矩阵
+    
+    // 第一个点，位于区间开始处
+    q1 = q;                                 
+    qdot1 = qdot;
+    force(f1, q1, qdot1);
+
+    // 第二个点，位于区间中点
+    q2 = qdot1 * dt / 2 + q;                
+    qdot2 = f1 / mass * dt / 2 + qdot;
+    force(f2, q2, qdot2);
+
+    // 第三个点，位于区间中点
+    q3 = qdot2 * dt /2 + q;                 
+    qdot3 = f2 / mass * dt / 2 + qdot;
+    force(f3, q3, qdot3);
+
+    // 第四个点，位于区间末尾/下一区间开始处
+    q4 = qdot3 * dt + q;                    
+    qdot4 = f3 / mass * dt + qdot;
+    force(f4, q4, qdot4);
+
+    q_new = q + dt * (qdot1 + 2*qdot2 + 2*qdot3 + qdot4) / 6;   // 最终的加权平均新位移
+    qdot_new = qdot + dt * ((f1 + 2*f2 + 2*f3 + f4) / mass) / 6;// 最终的加权平均新速度
+
+    q = q_new;                                                  // 将新的q通过引用传出
+    qdot = qdot_new;                                            // 将新的qdot通过引用传出
+    
+}
+```
+
 
 #### #5.1.3 后向欧拉积分
 
+```c
+template<typename FORCE, typename STIFFNESS> 
+inline void backward_euler(Eigen::VectorXd &q, Eigen::VectorXd &qdot, double dt, double mass,  FORCE &force, STIFFNESS &stiffness) {
+    Eigen::VectorXd f;                  // 用于存储力f的矩阵
+    Eigen::MatrixXd k;                  // 用于存储弹性系数k的矩阵
+    Eigen::VectorXd q_new;              // 用于存储经过dt后位移q的值的矩阵
+    Eigen::VectorXd qdot_new;           // 用于存储经过dt后速度qdot的值的矩阵   
+
+    force(f, q, qdot);                  // 计算这时的弹簧给球的力f=-kx，存储在f中
+    stiffness(k, q, qdot);              // 计算这时的弹簧给球的力k=-k，存储在k中
+
+    qdot_new = (qdot + (f / mass) * dt) / (1 - dt * dt * k(0,0) / mass);  // v1 = [v0 + (a * dt)]/[1-(k*dt^2)/m] 
+    q_new = qdot_new * dt + q;                                            // x1 = v1 * dt + x0
+
+    q = q_new;                          // 将新的q通过引用传出
+    qdot = qdot_new;                    // 将新的qdot通过引用传出    
+
+}
+```
+
 #### #5.1.4 混合欧拉积分
+
+```c
+template<typename FORCE> 
+inline void symplectic_euler(Eigen::VectorXd &q, Eigen::VectorXd &qdot, double dt, double mass,  FORCE &force) {
+	Eigen::VectorXd f;                  // 用于存储力f的矩阵
+    Eigen::VectorXd q_new;              // 用于存储经过dt后位移q的值的矩阵
+    Eigen::VectorXd qdot_new;           // 用于存储经过dt后速度qdot的值的矩阵
+	force(f, q, qdot);                  // 计算这时的弹簧给球的力f=-kx，存储在f中
+
+    qdot_new = (f / mass) * dt + qdot;  // v1 = a * dt + v0, 前向欧拉方法
+    q_new = qdot_new * dt + q;          // x1 = v1 * dt + x0，后向欧拉方法
+
+
+    q = q_new;                          // 将新的q通过引用传出
+    qdot = qdot_new;                    // 将新的qdot通过引用传出
+}
+```
+
+#### #5.2 通过命令行传入弹簧原长
+
+
+
+在main中，建立全局的弹簧原长变量 $l$ ：
+
+```c
+Eigen::VectorXd l;              // 弹簧原长
+```
+
+
+
+```c
+// 使用 k(即stiffness)和 x(即q-l)计算 f ，存储在引用的第一个参数中
+void dV_spring_particle_particle_dq(Eigen::VectorXd &dV, const Eigen::VectorXd &q, double stiffness, const Eigen::VectorXd l) {
+
+    dV.resize(1);           // f为一个数，当存储在一个1x1的矩阵中
+    //compute f
+    dV = stiffness * (q-l); // f = k * x
+
+}
+```
+
+
+
+
 
 
 
