--- a/report/图形学实验02_报告.md
+++ b/report/图形学实验02_报告.md
@@ -1,5 +1,3 @@
-
-
 <h1><center>  计算机图形学-2021  实验报告 <center>
 
 
@@ -276,32 +274,32 @@ T1:&(t,\mathbf{y}(t));
 \\T4:&(t+\Delta t,\mathbf{y}(t)+\Delta t\cdot k_3);
 $$
 
-$\mathbf{y}$ 的斜率 $k$ 可以表示为：       $k= \dot{\mathbf{y}}(t)=f(t,\mathbf{y}(t))$
+$\mathbf{y}$ 的斜率 $K$ 可以表示为：       $K= \dot{\mathbf{y}}(t)=f(t,\mathbf{y}(t))$
 
 这样：
 $$
 \begin{aligned}
-k_1&=f[t,\mathbf{y}(t)]
-\\k_2&=f[(t+\frac{\Delta t}{2}),\mathbf{y}(t)+\frac{\Delta t}{2}\cdot k_1]
-\\k_3&=f[(t+\frac{\Delta t}{2}),\mathbf{y}(t)+\frac{\Delta t}{2}\cdot k_2]
-\\k_4&=f[(t+\Delta t),\mathbf{y}(t)+\Delta t\cdot k_3]
+K_1&=f[t,\mathbf{y}(t)]
+\\K_2&=f[(t+\frac{\Delta t}{2}),\mathbf{y}(t)+\frac{\Delta t}{2}\cdot K_1]
+\\K_3&=f[(t+\frac{\Delta t}{2}),\mathbf{y}(t)+\frac{\Delta t}{2}\cdot K_2]
+\\K_4&=f[(t+\Delta t),\mathbf{y}(t)+\Delta t\cdot K_3]
 \end{aligned}
 $$
 
 其中：
 
-- *k*1是时间段开始时的斜率；
-- *k*2是时间段中点的斜率，通过欧拉法采用斜率*k*1来决定*y*在点$t+\frac{\Delta t}{2}$的值；
-- *k*3也是中点的斜率，但是这次采用斜率*k*2决定*y*值；
-- *k*4是时间段终点的斜率，其*y*值用*k*3决定。
+- *K*1是时间段开始时的斜率；
+- *K*2是时间段中点的斜率，通过欧拉法采用斜率*K*1来决定*y*在点$t+\frac{\Delta t}{2}$的值；
+- *K*3也是中点的斜率，但是这次采用斜率*K*2决定*y*值；
+- *K*4是时间段终点的斜率，其*y*值用*K*3决定。
 
 当四个斜率取平均时，中点的斜率有更大的权值，故最终使用的 $K$ 为:
 $$
-K=\frac{k_1+2k_2+2k_3+k_4}{6}
+K=\frac{K_1+2K_2+2K_3+K_4}{6}
 $$
-本模型中，斜率 $k$ 的计算方法为：
+本模型中，斜率 $K$ 的计算方法为：
 $$
-k_{n}
+K_{n}
 =\begin{pmatrix}
 \dot v_{n}\\
 \dot q_{n}
@@ -312,16 +310,50 @@ k_{n}
 v_{n}
 \end{pmatrix}
 $$
+(注意区分斜率 $K$ 和弹性系数 $k$ )
+
 其中选取的四个点的 $q_{n},v_{n}$ (n=1,2,3,4)的计算方式为：
-
 $$
-  q_1=q_{t}
+q_1=q_{t}
 \\v_1=v_{t}
-\\q_{n}=q_{t}+k_{n-1}\times\delta t
-\\v_{n}=v_{t}+\frac{-k_{n-1}\cdot q_{n-1}}{m} \times \delta t
+\\q_{n}=q_{t}+
+\begin{pmatrix}
+0 &1
+\end{pmatrix}
+K_{n-1}\times\delta t
+=q_{t}+v_{n-1}\times\delta t
+\\v_{n}=v_{t}+
+\begin{pmatrix}
+1 &0
+\end{pmatrix}
+K_{n-1}\times \delta t=v_{t}+
+\frac{-k\cdot q_{n-1}}{m} \times \delta t
 $$
 
-按照公式依次计算即可。
+按照公式依次计算：
+$$
+\begin{aligned}
+  q_1=&q_{t};
+\\v_1=&v_{t};
+\\
+\\q_2=&q_{t}+v_{1}\times\frac{\Delta t}{2}
+\\v_2=&v_{t}+\frac{-k\cdot q_{1}}{m} \times\frac{\Delta t}{2}
+\\
+\\q_3=&q_{t}+v_{2}\times\frac{\Delta t}{2}
+\\v_3=&v_{t}+\frac{-k\cdot q_{2}}{m} \times\frac{\Delta t}{2}
+\\
+\\q_4=&q_{t}+v_{3}\times{\Delta t}
+\\v_4=&v_{t}+\frac{-k\cdot q_{3}}{m} \times{\Delta t}
+\end{aligned}
+$$
+最终得：
+$$
+\begin{aligned}
+q_{t+1}=&q_{t}+\frac{v_1+2v_2+2v_3+v_4}{6}\times\Delta t
+\\v_{t+1}=&v_{t}+\frac{-k(q_1+2q_2+2q_3+q_4)}{6m} \times \Delta t
+\end{aligned}
+$$
+
 
 #### #4.2.3：隐式（向后）欧拉方法
 
@@ -405,11 +437,23 @@ $$
 
 #### #5.0 基本的变量信息
 
-实验中，弹簧对物块的作用力为 $f$，物块的位移为 $q$，物块的速度为 $qdot$，均为Eigen::VectorXd类型，长度resize为1，即1x1的矩阵。
+实验中，弹簧对物块的作用力为 $f$，物块的位移为 $q$，物块的速度为 $qdot$，均为Eigen::VectorXd（行数目任意，列数为1的double矩阵）类型，行数使用中resize为1，作为1x1的矩阵使用。
 
 物块的质量为 $mass$，每次细分的时间长度为 $dt$，弹簧的弹性系数为 $stiffness$，均为 $double$ 类型。
 
+由于这里认为弹簧的原长为 $0$ ，故弹簧形变量 $x =$物块位移 $q$，弹力 $f=-kx=-kq$。
+
 #### #5.1.1 前向欧拉积分
+
+由前面的推导可得：
+$$
+\begin{aligned}
+v_{t+1}=&v_{t}+\frac{-k\cdot q_{t}}{m} \times \Delta t
+=v_{t}+\frac{f}{m} \times \Delta t
+\\q_{t+1}=&q_{t}+v_{t}\times\Delta t
+\end{aligned}
+$$
+其中，$f=-kx=-kq$，由force函数计算得到。
 
 ```c
 template<typename FORCE> 
@@ -430,6 +474,65 @@ inline void forward_euler(Eigen::VectorXd &q, Eigen::VectorXd &qdot, double dt, 
 
 
 ####  #5.1.2 四阶Runge-Kutta
+
+由前面的推导可得：
+
+$$
+\begin{aligned}
+
+  q_1=&q_{t}
+\\
+\\v_1=&v_{t}
+\\
+\\q_{n}=&q_{t}+
+            \begin{pmatrix}
+            0 &1
+            \end{pmatrix}
+            K_{n-1}\times\delta t
+     \\=&q_{t}+v_{n-1}\times\delta t
+     \\
+\\v_{n}=&v_{t}+
+            \begin{pmatrix}
+            1 &0
+            \end{pmatrix}
+            K_{n-1}\times \delta t
+    \\=&v_{t}+\frac{-k\cdot q_{n-1}}{m} \times \delta t
+    \\=&v_{t}+\frac{f_{n-1}}{m} \times \delta t
+    
+\end{aligned}
+$$
+
+所以有：
+$$
+\begin{aligned}
+  q_1=&q_{t};
+\\v_1=&v_{t};
+\\f_1=&-k\cdot q_{1}
+\\
+\\q_2=&q_{t}+v_{1}\times\frac{\Delta t}{2}
+\\v_2=&v_{t}+\frac{f_1}{m} \times\frac{\Delta t}{2}
+\\f_2=&-k\cdot q_{2}
+\\
+\\q_3=&q_{t}+v_{2}\times\frac{\Delta t}{2}
+\\v_3=&v_{t}+\frac{f_2}{m} \times\frac{\Delta t}{2}
+\\f_3=&-k\cdot q_{3}
+\\
+\\q_4=&q_{t}+v_{3}\times{\Delta t}
+\\v_4=&v_{t}+\frac{f_3}{m} \times{\Delta t}
+\\f_4=&-k\cdot q_{4}
+\end{aligned}
+$$
+
+最终：
+$$
+\begin{aligned}
+q_{t+1}=&q_{t}+\frac{v_1+2v_2+2v_3+v_4}{6}\times\Delta t
+\\v_{t+1}=&v_{t}+\frac{f_1+2f_2+2f_3+f_4}{6m} \times \Delta t
+\end{aligned}
+$$
+
+
+
 ```c
 template<typename FORCE> 
 inline void runge_kutta(Eigen::VectorXd &q, Eigen::VectorXd &qdot, double dt, double mass,  FORCE &force) {
@@ -469,8 +572,17 @@ inline void runge_kutta(Eigen::VectorXd &q, Eigen::VectorXd &qdot, double dt, do
 }
 ```
 
-
 #### #5.1.3 后向欧拉积分
+
+由前面的推导可得：
+$$
+\begin{aligned}
+v_{t+1}&=(v_{t}+\frac{-k\cdot q_{t}}{m}\Delta t)/(1+\frac{k}{m}\Delta t^{2})
+     \\&=(v_{t}+\frac{f_t}{m} \Delta t)/(1+\frac{k}{m}\Delta t^{2})
+\\
+\\q_{t+1}&=q_{t}+v_{t+1}\times\Delta t
+\end{aligned}
+$$
 
 ```c
 template<typename FORCE, typename STIFFNESS> 
@@ -493,6 +605,15 @@ inline void backward_euler(Eigen::VectorXd &q, Eigen::VectorXd &qdot, double dt,
 ```
 
 #### #5.1.4 混合欧拉积分
+
+由前面的推导可得：
+$$
+\begin{aligned}
+v_{t+1}&=v_{t}+\frac{-k\cdot q_{t}}{m} \times \Delta t
+        =v_{t}+\frac{f_t}{m} \times \Delta t
+\\q_{t+1}&=q_{t}+v_{t+1}\times\Delta t
+\end{aligned}
+$$
 
 ```c
 template<typename FORCE> 
