--- a/report/图形学实验02_报告.md
+++ b/report/图形学实验02_报告.md
@@ -437,7 +437,7 @@ $$
 
 #### #5.0 基本的变量信息
 
-实验中，弹簧对物块的作用力为 $f$，物块的位移为 $q$，物块的速度为 $qdot$，均为Eigen::VectorXd（行数目任意，列数为1的double矩阵）类型，行数使用中resize为1，作为1x1的矩阵使用。
+实验中，弹簧对物块的作用力为 $f$，物块的位移为 $q$，物块的速度为 $qdot$，均为Eigen::VectorXd（行数目任意，列数为1的double矩阵）类型。使用中将行数resize为1，作为1x1的矩阵使用。
 
 物块的质量为 $mass$，每次细分的时间长度为 $dt$，弹簧的弹性系数为 $stiffness$，均为 $double$ 类型。
 
@@ -634,28 +634,77 @@ inline void symplectic_euler(Eigen::VectorXd &q, Eigen::VectorXd &qdot, double d
 
 #### #5.2 通过命令行传入弹簧原长
 
-
-
 在main中，建立全局的弹簧原长变量 $l$ ：
 
 ```c
-Eigen::VectorXd l;              // 弹簧原长
+Eigen::VectorXd l;                  // 弹簧原长
 ```
 
+将这个列向量的行数resize为1，作为1x1的矩阵使用：
 
+```c
+    l.resize(1);
+```
+
+默认大小为0：
+
+```c
+    l(0) = 0;                       // 弹簧原长默认为0m
+```
+
+值可由命令行第二个参数传入：
+
+```c
+    if(argc > 2) {
+        l(0) = atoi(argv[2]);      // 弹簧原长可由第二个参数传入
+    }
+```
+
+由于认为弹簧的原长不再一直为 $0$ ，故 弹簧形变量 $x \neq$ 物块位移 $q$。
+
+此时 弹簧形变量 $x = q-l$。
+
+计算弹力时，使用 $f=-kx=-k(q-l)$。
+
+由于弹力的计算使用的是force函数，故修改此处:
+
+```c
+auto force = [](Eigen::VectorXd &f, const Eigen::VectorXd &q, const Eigen::VectorXd &qdot) { 
+    dV_spring_particle_particle_dq(f, q, stiffness, l); 
+    f *= -1; 
+};
+```
+
+force函数使用了dV_spring_particle_particle_dq函数，进行修改，传入参数$l$，计算弹力$f$时使用$f=-k(q-l)$:
 
 ```c
 // 使用 k(即stiffness)和 x(即q-l)计算 f ，存储在引用的第一个参数中
 void dV_spring_particle_particle_dq(Eigen::VectorXd &dV, const Eigen::VectorXd &q, double stiffness, const Eigen::VectorXd l) {
-
     dV.resize(1);           // f为一个数，当存储在一个1x1的矩阵中
     //compute f
     dV = stiffness * (q-l); // f = k * x
-
 }
 ```
 
+则完成修改。
 
+#### #5.3 实验结果
+
+##### #5.3.1 前向欧拉积分
+
+
+
+##### #5.3.2 四阶Runge-Kutta方法
+
+
+
+##### #5.3.3 隐式（向后）欧拉方法
+
+
+
+##### #5.3.4 混合欧拉方法
+
+##### #5.3.5 通过命令行传入弹簧原长
 
 
 
